tests/ui/consts/issue-104609.stderr
error[E0425]: cannot find value `oops` in this scope
  --> $DIR/issue-104609.rs:2:5
   |
LL |     oops;
   |     ^^^^ not found in this scope

error[E0282]: type annotations needed
  --> $DIR/issue-104609.rs:7:5
   |
LL |     std::mem::transmute::<_, *mut _>(1_u8);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `Dst` declared on the function `transmute`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0425.
For more information about an error, try `rustc --explain E0282`.
